--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,33 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
+<ion-app>
+  <ion-split-pane contentId="main" >
+    <!--  the side menu  -->
+    <ion-menu contentId="main" menuId="principal">
+      <ion-header>
+        <ion-toolbar>
+          <ion-title class="titulo" [routerLink]="['/home']"> Menu</ion-title >
+          <ion-icon slot="icon-only" name="menu-sharp"></ion-icon>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-menu-toggle>
+          <ion-item button=true detail=true [routerLink]="['/area']" > 
+            <ion-label class="titulo" style="color: red;" > Crear Area Recreativa </ion-label>
+            <ion-icon slot="start" color="danger" name="create-outline"></ion-icon>
+          </ion-item>
+          <ion-item button=true detail=true [routerLink]="['/contraseña']" > 
+            <ion-label class="titulo" style="color: red;"  > Recuperar Contraseña </ion-label>
+            <ion-icon color="danger" slot="start" name="create-outline"></ion-icon>
+          </ion-item>
+          <ion-item button=true detail=true [routerLink]="['/usuario']" > 
+            <ion-label class="titulo" style="color: red;" > Crear Usuario </ion-label>
+            <ion-icon color="danger" slot="start"  name="create-outline"></ion-icon>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-content>
+    </ion-menu>
+    <ion-router-outlet id="main"></ion-router-outlet>
+  </ion-split-pane>
+</ion-app>
