--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </ion-app>
 <ion-app>
   <ion-split-pane contentId="main" >
-    <!--  the side menu  -->
+    <!--  Burger menu de Usuario -->
     <ion-menu contentId="main" menuId="principal">
       <ion-header>
         <ion-toolbar>
