--- a/src/app/iniciosesion/iniciosesion.page.html
+++ b/src/app/iniciosesion/iniciosesion.page.html
@@ -5,7 +5,7 @@
       <ion-icon name="arrow-back-circle-outline" color="danger" > </ion-icon> 
     </ion-back-button>
     <ion-title >
-      <img src="../../assets/icon/Logo.png"  style="width: 200px;" class="img"   alt="">
+      <a [routerLink]='["/iniciosesion"]' > <img src="../../assets/icon/Logo.png"   style="width: 200px;" class="img"   alt=""></a>
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -28,21 +28,11 @@
   <br>
   <br>
   <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
   <ion-button expand="medium" class="bcentrado" color="danger" [routerLink]='["/sesion"]'   > 
     inicio de Sesion
   </ion-button>
   <br>
-  <ion-button  expand="full " color="danger" class="bcentrado" [routerLink]='["/registro"]'  > 
+  <ion-button  expand="medium" color="danger" class="bcentrado" [routerLink]='["/registro"]'  > 
     Crear Cuenta
   </ion-button>
 </ion-content>
