--- a/src/app/pages/pingpong/pingpong.page.html
+++ b/src/app/pages/pingpong/pingpong.page.html
@@ -31,7 +31,7 @@
       <ion-item>
         <ion-label position="stacked">Mesa</ion-label>
       <ion-select placeholder="Seleccione cantidad" [(ngModel)]="data.Mesas">
-        <ion-select-option *ngFor="let niv of mesas" [value]="niv.id">{{niv.nivel}}</ion-select-option>
+        <ion-select-option *ngFor="let niv of mesa" [value]="niv.id">{{niv.nivel}}</ion-select-option>
       </ion-select>
       </ion-item>
 
