--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -5,7 +5,7 @@
       <ion-icon name="arrow-back-circle-outline" color="danger" > </ion-icon> 
     </ion-back-button>
     <ion-title >
-      <img src="../../assets/icon/Logo.png"  style="width: 200px;" class="img"   alt="">
+      <a [routerLink]='["/iniciosesion"]' > <img src="../../assets/icon/Logo.png"   style="width: 200px;" class="img"   alt=""></a>
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -27,7 +27,7 @@
       <ion-label class="normal" id="email" >
       </ion-label>
       <ion-icon  slot="end" name="mail-outline" color="danger"></ion-icon>
-      <ion-input class="normal2 " type="email" placeholder="Ingresar Email " inputmode="text" >
+      <ion-input class="normal2 " type="Email" placeholder="Ingresar Email " inputmode="Email" >
       </ion-input>
     </ion-item>
     <br>
