--- a/src/app/sesion/sesion.page.html
+++ b/src/app/sesion/sesion.page.html
@@ -5,7 +5,7 @@
       <ion-icon name="arrow-back-circle-outline" color="danger" > </ion-icon> 
     </ion-back-button>
     <ion-title >
-      <img src="../../assets/icon/Logo.png"  style="width: 200px;" class="img"   alt="">
+      <a [routerLink]='["/iniciosesion"]' > <img src="../../assets/icon/Logo.png"   style="width: 200px;" class="img"   alt=""></a>
     </ion-title>
   </ion-toolbar>
 </ion-header>
